--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgres://cdgpvrhz:kzXyrFDWM4RsxAkKqkzPV8v-lakq47hc@batyr.db.elephantsql.com/cdgpvrhz
+JWT_SECRET=jskdncjknsddsccjsdkncqwewe
